--- a/_config.yml
+++ b/_config.yml
@@ -66,5 +66,5 @@ titlecase: true
 
 include: [".htaccess"]
 exclude: ["demo/*", "lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "vendor"]
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-sitemap]
 theme: neo-hpstr-jekyll-theme
