--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ owner:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-101173204-1
-google_verify: 0d0yxnsAu9c7uy1oUFM-i_6nU83CQjgAKgrvPUdElA0
+google_verify_http: 0d0yxnsAu9c7uy1oUFM-i_6nU83CQjgAKgrvPUdElA0
+google_verify_https: 0d0yxnsAu9c7uy1oUFM-i_6nU83CQjgAKgrvPUdElA0
 bing_verify:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
