Added landing page

--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,7 @@ baseurl: ''
 #   To create sub categories. add a submenu item
 # See the example
 menu:
-  - title: 'Home'
-    url: '/'
-  - title: 'Tags'
-    url: '/tags'
-  - title: 'Categories'
+  - title: 'Course Reviews'
     url: '/categories'
     type: 'categories'
 
@@ -48,7 +44,7 @@ sass:
 permalink:   /:categories/:title/
 
 # Amount of post to show on home page
-paginate: 5
+# paginate: 5
 
 # if true, shows the floatting share buttons
 float_share: false
