--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ baseurl: ''
 #   To create sub categories. add a submenu item
 # See the example
 menu:
+  - title: 'Project Reviews'
+    url: '/tags'
   - title: 'Course Reviews'
     url: '/categories'
     type: 'categories'
