--- a/_config.yml
+++ b/_config.yml
@@ -73,4 +73,6 @@ titlecase: true
 include: [".htaccess"]
 exclude: ["demo/*", "lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "vendor"]
 gems: [jekyll-paginate, jekyll-sitemap]
-theme: neo-hpstr-jekyll-theme
+#theme: neo-hpstr-jekyll-theme
+theme: jekyll-theme-modernist
+
