--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            DAMP, Aero
-description:      DAMP, Aero
+title:            Aero-DAMP
+description:      Aero-DAMP
 
 reading_time:     false # if true, shows the estimated reading time for a post
 
