--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,6 +89,8 @@ docs-en:
         url:        /course_reviews/department_elective/ae-759.html
       - title:  MM 445
         url:        /course_reviews/department_elective/mm-445.html
+      - title:  AE 695
+        url:        /course_reviews/department_elective/ae-695.html
 
   - title:      Institute Electives
     children:
