--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -91,6 +91,8 @@ docs-en:
         url:        /course_reviews/department_elective/mm-445.html
       - title:  AE 695
         url:        /course_reviews/department_elective/ae-695.html
+      - title:  AE 622
+        url:        /course_reviews/department_elective/ae-622.html
 
   - title:      Institute Electives
     children:
