--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -275,14 +275,16 @@ other-en:
 toc:
   - title:      Grad School Profiles
     children:
+      - title:  Amal Sebastian
+        url:        /grad_profiles/amal-sebastian.html
       - title:  Harshvardhan Baldwa
         url:        /grad_profiles/harshvardhan-baldwa.html
+      - title:  Niket Parikh
+        url:        /grad_profiles/niket-parikh.html
       - title:  Vedanth Sharma
         url:        /grad_profiles/vedanth-sharma.html
       - title:  Manav Vora
         url:        /grad_profiles/manav-vora.html
-      - title:  Niket Parikh
-        url:        /grad_profiles/niket-parikh.html
       - title:  Miloni Atal
         url:        /grad_profiles/miloni-atal.html
       - title:  Sakshi Dayal
