--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -273,46 +273,58 @@ other-en:
 
 ############################################################### GRAD SCHOOL PROFILES ###########################################################
 toc:
-  - title:      Grad School Profiles
+  - title: Grad School Profiles
     children:
-      - title:  Amal Sebastian
-        url:        /grad_profiles/amal-sebastian.html
-      - title:  Harshvardhan Baldwa
-        url:        /grad_profiles/harshvardhan-baldwa.html
-      - title:  Niket Parikh
-        url:        /grad_profiles/niket-parikh.html
-      - title:  Vedanth Sharma
-        url:        /grad_profiles/vedanth-sharma.html
-      - title:  Manav Vora
-        url:        /grad_profiles/manav-vora.html
-      - title:  Miloni Atal
-        url:        /grad_profiles/miloni-atal.html
-      - title:  Sakshi Dayal
-        url:        /grad_profiles/sakshi-dayal.html
-      - title:  Tarang Jain
-        url:        /grad_profiles/tarang-jain.html
-      - title:  Aaron John Sabu
-        url:        /grad_profiles/aaron-john-sabu.html
-      - title:  Malhar Prajapati
-        url:        /grad_profiles/malhar-prajapati.html
-      - title:  Maharshi Pathak
-        url:        /grad_profiles/maharshi-pathak.html
-      - title:  Pujan Biswas
-        url:        /grad_profiles/pujan-biswas.html
-      - title:  Apoorv Som
-        url:        /grad_profiles/apoorv-som.html       
-      - title:  Jinay Patel
-        url:        /grad_profiles/jinay-patel.html
-      - title:  Karan Suresh Jagdale
-        url:        /grad_profiles/karan-suresh-jagdale.html
-      - title:  Maulik Bhatt
-        url:        /grad_profiles/maulik-bhatt.html
-      - title:  Naman Aggarwal
-        url:        /grad_profiles/naman-aggarwal.html
-      - title:  Karthik Anantharaman
-        url:        /grad_profiles/karthik-anantharaman.html
-      - title: Useful Links
-        url:        /grad_profiles/useful-links.html
+      - title: Computational Science and Engineering
+        subfolderitems:
+        - page: Amal Sebastian
+          url: /grad_profiles/amal-sebastian.html
+        - page: Harshvardhan Baldwa
+          url: /grad_profiles/harshvardhan-baldwa.html
+        - page: Tarang Jain
+          url: /grad_profiles/tarang-jain.html
+      - title: Fluids
+        subfolderitems:
+        - page: Karthik Anantharaman
+          url: /grad_profiles/karthik-anantharaman.html
+      - title: Structures
+        subfolderitems:
+        - page: Apoorv Som
+          url: /grad_profiles/apoorv-som.html
+      - title: Controls
+        subfolderitems:
+        - page: Niket Parikh
+          url: /grad_profiles/niket-parikh.html
+        - page: Manav Vora
+          url: /grad_profiles/manav-vora.html
+        - page: Aaron John Sabu
+          url: /grad_profiles/aaron-john-sabu.html
+        - page: Maharshi Pathak
+          url: /grad_profiles/maharshi-pathak.html
+        - page: Jinay Patel
+          url: /grad_profiles/jinay-patel.html
+        - page: Karan Suresh Jagdale
+          url: /grad_profiles/karan-suresh-jagdale.html
+        - page: Maulik Bhatt
+          url: /grad_profiles/maulik-bhatt.html
+        - page: Naman Aggarwal
+          url: /grad_profiles/naman-aggarwal.html
+      - title: Propulsion
+        subfolderitems:
+        - page: Vedanth Sharma
+          url: /grad_profiles/vedanth-sharma.html
+        - page: Pujan Biswas
+          url: /grad_profiles/pujan-biswas.html
+      - title: Others
+        subfolderitems:
+        - page: Miloni Atal
+          url: /grad_profiles/miloni-atal.html
+        - page: Sakshi Dayal
+          url: /grad_profiles/sakshi-dayal.html
+        - page: Malhar Prajapati
+          url: /grad_profiles/malhar-prajapati.html
+        - page: Useful Links
+          url: /grad_profiles/useful-links.html
 
 
 ########################################################## MISCELLANEOUS REVIEWS ########################################################
