--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -276,7 +276,7 @@ toc:
   - title: Grad School Profiles
     children:
       - title: Computational Science and Engineering
-        subfolderitems:
+        children:
         - page: Amal Sebastian
           url: /grad_profiles/amal-sebastian.html
         - page: Harshvardhan Baldwa
@@ -284,15 +284,15 @@ toc:
         - page: Tarang Jain
           url: /grad_profiles/tarang-jain.html
       - title: Fluids
-        subfolderitems:
+        children:
         - page: Karthik Anantharaman
           url: /grad_profiles/karthik-anantharaman.html
       - title: Structures
-        subfolderitems:
+        children:
         - page: Apoorv Som
           url: /grad_profiles/apoorv-som.html
       - title: Controls
-        subfolderitems:
+        children:
         - page: Niket Parikh
           url: /grad_profiles/niket-parikh.html
         - page: Manav Vora
@@ -310,13 +310,13 @@ toc:
         - page: Naman Aggarwal
           url: /grad_profiles/naman-aggarwal.html
       - title: Propulsion
-        subfolderitems:
+        children:
         - page: Vedanth Sharma
           url: /grad_profiles/vedanth-sharma.html
         - page: Pujan Biswas
           url: /grad_profiles/pujan-biswas.html
       - title: Others
-        subfolderitems:
+        children:
         - page: Miloni Atal
           url: /grad_profiles/miloni-atal.html
         - page: Sakshi Dayal
