--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -277,53 +277,53 @@ toc:
     children:
       - title: Computational Science and Engineering
         children:
-        - page: Amal Sebastian
+        - title: Amal Sebastian
           url: /grad_profiles/amal-sebastian.html
-        - page: Harshvardhan Baldwa
+        - title: Harshvardhan Baldwa
           url: /grad_profiles/harshvardhan-baldwa.html
-        - page: Tarang Jain
+        - title: Tarang Jain
           url: /grad_profiles/tarang-jain.html
       - title: Fluids
         children:
-        - page: Karthik Anantharaman
+        - title: Karthik Anantharaman
           url: /grad_profiles/karthik-anantharaman.html
       - title: Structures
         children:
-        - page: Apoorv Som
+        - title: Apoorv Som
           url: /grad_profiles/apoorv-som.html
       - title: Controls
         children:
-        - page: Niket Parikh
+        - title: Niket Parikh
           url: /grad_profiles/niket-parikh.html
-        - page: Manav Vora
+        - title: Manav Vora
           url: /grad_profiles/manav-vora.html
-        - page: Aaron John Sabu
+        - title: Aaron John Sabu
           url: /grad_profiles/aaron-john-sabu.html
-        - page: Maharshi Pathak
+        - title: Maharshi Pathak
           url: /grad_profiles/maharshi-pathak.html
-        - page: Jinay Patel
+        - title: Jinay Patel
           url: /grad_profiles/jinay-patel.html
-        - page: Karan Suresh Jagdale
+        - title: Karan Suresh Jagdale
           url: /grad_profiles/karan-suresh-jagdale.html
-        - page: Maulik Bhatt
+        - title: Maulik Bhatt
           url: /grad_profiles/maulik-bhatt.html
-        - page: Naman Aggarwal
+        - title: Naman Aggarwal
           url: /grad_profiles/naman-aggarwal.html
       - title: Propulsion
         children:
-        - page: Vedanth Sharma
+        - title: Vedanth Sharma
           url: /grad_profiles/vedanth-sharma.html
-        - page: Pujan Biswas
+        - title: Pujan Biswas
           url: /grad_profiles/pujan-biswas.html
       - title: Others
         children:
-        - page: Miloni Atal
+        - title: Miloni Atal
           url: /grad_profiles/miloni-atal.html
-        - page: Sakshi Dayal
+        - title: Sakshi Dayal
           url: /grad_profiles/sakshi-dayal.html
-        - page: Malhar Prajapati
+        - title: Malhar Prajapati
           url: /grad_profiles/malhar-prajapati.html
-        - page: Useful Links
+        - title: Useful Links
           url: /grad_profiles/useful-links.html
 
 
