--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -274,9 +274,9 @@ other-en:
 ############################################################### GRAD SCHOOL PROFILES ###########################################################
 toc:
   - title: Grad School Profiles
-    children:
+    subfolderitems:
       - title: Computational Science and Engineering
-        children:
+        subfolderitems:
         - title: Amal Sebastian
           url: /grad_profiles/amal-sebastian.html
         - title: Harshvardhan Baldwa
@@ -284,15 +284,15 @@ toc:
         - title: Tarang Jain
           url: /grad_profiles/tarang-jain.html
       - title: Fluids
-        children:
+        subfolderitems:
         - title: Karthik Anantharaman
           url: /grad_profiles/karthik-anantharaman.html
       - title: Structures
-        children:
+        subfolderitems:
         - title: Apoorv Som
           url: /grad_profiles/apoorv-som.html
       - title: Controls
-        children:
+        subfolderitems:
         - title: Niket Parikh
           url: /grad_profiles/niket-parikh.html
         - title: Manav Vora
@@ -310,13 +310,13 @@ toc:
         - title: Naman Aggarwal
           url: /grad_profiles/naman-aggarwal.html
       - title: Propulsion
-        children:
+        subfolderitems:
         - title: Vedanth Sharma
           url: /grad_profiles/vedanth-sharma.html
         - title: Pujan Biswas
           url: /grad_profiles/pujan-biswas.html
       - title: Others
-        children:
+        subfolderitems:
         - title: Miloni Atal
           url: /grad_profiles/miloni-atal.html
         - title: Sakshi Dayal
