Changed sidebar topics

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -273,58 +273,60 @@ other-en:
 
 ############################################################### GRAD SCHOOL PROFILES ###########################################################
 toc:
-  - title: Grad School Profiles
-    subfolderitems:
-      - title: Computational Science and Engineering
-        subfolderitems:
-        - title: Amal Sebastian
-          url: /grad_profiles/amal-sebastian.html
-        - title: Harshvardhan Baldwa
-          url: /grad_profiles/harshvardhan-baldwa.html
-        - title: Tarang Jain
-          url: /grad_profiles/tarang-jain.html
-      - title: Fluids
-        subfolderitems:
-        - title: Karthik Anantharaman
-          url: /grad_profiles/karthik-anantharaman.html
-      - title: Structures
-        subfolderitems:
-        - title: Apoorv Som
-          url: /grad_profiles/apoorv-som.html
-      - title: Controls
-        subfolderitems:
-        - title: Niket Parikh
-          url: /grad_profiles/niket-parikh.html
-        - title: Manav Vora
-          url: /grad_profiles/manav-vora.html
-        - title: Aaron John Sabu
-          url: /grad_profiles/aaron-john-sabu.html
-        - title: Maharshi Pathak
-          url: /grad_profiles/maharshi-pathak.html
-        - title: Jinay Patel
-          url: /grad_profiles/jinay-patel.html
-        - title: Karan Suresh Jagdale
-          url: /grad_profiles/karan-suresh-jagdale.html
-        - title: Maulik Bhatt
-          url: /grad_profiles/maulik-bhatt.html
-        - title: Naman Aggarwal
-          url: /grad_profiles/naman-aggarwal.html
-      - title: Propulsion
-        subfolderitems:
-        - title: Vedanth Sharma
-          url: /grad_profiles/vedanth-sharma.html
-        - title: Pujan Biswas
-          url: /grad_profiles/pujan-biswas.html
-      - title: Others
-        subfolderitems:
-        - title: Miloni Atal
-          url: /grad_profiles/miloni-atal.html
-        - title: Sakshi Dayal
-          url: /grad_profiles/sakshi-dayal.html
-        - title: Malhar Prajapati
-          url: /grad_profiles/malhar-prajapati.html
-        - title: Useful Links
-          url: /grad_profiles/useful-links.html
+  - title: Computational Science and Engineering
+    children:
+    - title: Amal Sebastian
+      url: /grad_profiles/amal-sebastian.html
+    - title: Harshvardhan Baldwa
+      url: /grad_profiles/harshvardhan-baldwa.html
+    - title: Tarang Jain
+      url: /grad_profiles/tarang-jain.html
+
+  - title: Fluids
+    children:
+    - title: Karthik Anantharaman
+      url: /grad_profiles/karthik-anantharaman.html
+  - title: Structures
+    children:
+    - title: Apoorv Som
+      url: /grad_profiles/apoorv-som.html
+
+  - title: Controls
+    children:
+    - title: Niket Parikh
+      url: /grad_profiles/niket-parikh.html
+    - title: Manav Vora
+      url: /grad_profiles/manav-vora.html
+    - title: Aaron John Sabu
+      url: /grad_profiles/aaron-john-sabu.html
+    - title: Maharshi Pathak
+      url: /grad_profiles/maharshi-pathak.html
+    - title: Jinay Patel
+      url: /grad_profiles/jinay-patel.html
+    - title: Karan Suresh Jagdale
+      url: /grad_profiles/karan-suresh-jagdale.html
+    - title: Maulik Bhatt
+      url: /grad_profiles/maulik-bhatt.html
+    - title: Naman Aggarwal
+      url: /grad_profiles/naman-aggarwal.html
+
+  - title: Propulsion
+    children:
+    - title: Vedanth Sharma
+      url: /grad_profiles/vedanth-sharma.html
+    - title: Pujan Biswas
+      url: /grad_profiles/pujan-biswas.html
+      
+  - title: Others
+    children:
+    - title: Miloni Atal
+      url: /grad_profiles/miloni-atal.html
+    - title: Sakshi Dayal
+      url: /grad_profiles/sakshi-dayal.html
+    - title: Malhar Prajapati
+      url: /grad_profiles/malhar-prajapati.html
+    - title: Useful Links
+      url: /grad_profiles/useful-links.html
 
 
 ########################################################## MISCELLANEOUS REVIEWS ########################################################
