--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -108,6 +108,8 @@ docs-en:
         url:        /course_reviews/institute_elective/me-761.html
       - title:  DE 331
         url:        /course_reviews/institute_elective/de-331.html
+      - title:  ME 616
+        url:        /course_reviews/institute_elective/me-616.html
      
       
   - title:      Minors
