--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -269,6 +269,8 @@ other-en:
         url:        /project_reviews/other/controls/maity.html
       - title:  Prof. Ravi Banavar (SysCon)
         url:        /project_reviews/other/controls/banavar.html
+      - title:  Prof. Rohit Gupta
+        url:        /project_reviews/other/controls/rohit_gupta.html
 
   - title:      Propulsion
     children:
