--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,6 +89,8 @@ docs-en:
         url:        /course_reviews/department_elective/mm-445.html
       - title:  AE 710
         url:        /course_reviews/department_elective/ae-710.html
+      - title:  ME 472
+        url:        /course_reviews/department_elective/me-472.html
 
   - title:      Institute Electives
     children:
