--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -93,6 +93,10 @@ docs-en:
         url:        /course_reviews/department_elective/me-472.html
       - title:  ME 415
         url:        /course_reviews/department_elective/me-415.html
+      - title:  AE 678
+        url:        /course_reviews/department_elective/ae-678.html
+      - title:  AE 648
+        url:        /course_reviews/department_elective/ae-648.html
         
   - title:      Institute Electives
     children:
