--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -111,6 +111,8 @@ docs-en:
         url:        /course_reviews/department_elective/ae-673.html
       - title:  IE 614
         url:        /course_reviews/department_elective/ie-614.html
+      - title:  AE 649
+        url:        /course_reviews/department_elective/ae-649.html
 
   - title:      Institute Electives
     children:
