--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -113,6 +113,8 @@ docs-en:
         url:        /course_reviews/department_elective/ie-614.html
       - title:  AE 649
         url:        /course_reviews/department_elective/ae-649.html
+      - title:  SC 602
+        url:        /course_reviews/department_elective/sc-602.html
 
   - title:      Institute Electives
     children:
